--- a/default.hbs
+++ b/default.hbs
@@ -7,6 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="{{asset "build/tailwindcss.css" }}" />
+    <link rel="stylesheet" type="text/css" href="{{asset "build/common.css" }}" />
+
 
     <title>{{meta_title}}</title>
 
@@ -57,7 +59,7 @@
     </header> --}}
 
     <header class="site-header">
-        <div class="grid">
+        <div class="container mx-auto">
             ss
         </div>
     </header>
