--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -1,3 +1,13 @@
-body {
-    font-size: 20px;
+:root {
+    --justify-between: {
+        display: flex;
+        justify-content: space-between;
+    }
+}
+.site-header {
+    height: 60px;
+}
+
+.nav {
+    @apply justify-between;
 }
