--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -29,6 +29,9 @@
 .price-common {
   color: #1e9fff;
 }
+body {
+  background: #f8f8f8;
+}
 .icon {
   width: 1em;
   height: 1em;
@@ -116,4 +119,71 @@
 }
 .site-header .btn-menu {
   height: 60px;
+}
+.site-footer {
+  background: #fff;
+  text-align: center;
+  height: 60px;
+  line-height: 60px;
+  color: #999;
+}
+.site-sidebar {
+  margin-top: 10px;
+}
+.gh-search-box {
+  background: #fff;
+  padding: 15px;
+  border-radius: 5px;
+}
+.gh-search-box .search-text {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  border: solid 1px #e8e9e7;
+  outline: 0;
+  padding: 0 10px;
+  font-size: 12px;
+  height: 30px;
+  line-height: 30px;
+  border-radius: 3px;
+}
+.gh-search-box .btn-search {
+  width: 40px;
+  height: 30px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  border: solid 1px #e8e9e7;
+  margin-left: 5px;
+  border-radius: 3px;
+}
+.gh-sidebar-section {
+  background: #fff;
+  padding: 15px;
+  border-radius: 5px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+.gh-sidebar-section .section-head {
+  border-bottom: 1px solid #e8e9e7;
+  width: 100%;
+  color: #666;
+  font-weight: 600;
+  padding-bottom: 10px;
+  margin-bottom: 10px;
+}
+.gh-card {
+  background: #fff;
+  padding: 15px;
+  border-radius: 5px;
+  margin-bottom: 10px;
+}
+.gh-card:first-child {
+  margin-top: 10px;
 }
