--- a/assets/less/common.less
+++ b/assets/less/common.less
@@ -1,5 +1,7 @@
 @import "./_mixins.less";
-
+body {
+    background: @color-bg;
+}
 .icon {
     width: 1em;
     height: 1em;
@@ -65,5 +67,62 @@
     }
     .btn-menu {
         height: 60px;
+    }
+}
+.site-footer {
+    background: #fff;
+    text-align: center;
+    height: 60px;
+    line-height: 60px;
+    color: #999;
+}
+.site-sidebar {
+    margin-top: 10px;
+}
+.gh-search-box {
+    background: #fff;
+    padding: 15px;
+    border-radius: 5px;
+    .search-text {
+        flex: 1;
+        border: solid 1px @color-border;
+        outline: 0;
+        padding: 0 10px;
+        font-size: 12px;
+        height: 30px;
+        line-height: 30px;
+        border-radius: 3px;
+    }
+    .btn-search {
+        width: 40px;
+        height: 30px;
+        .flex-center();
+        border: solid 1px @color-border;
+        margin-left: 5px;
+        border-radius: 3px;
+    }
+}
+.gh-sidebar-section {
+    background: #fff;
+    padding: 15px;
+    border-radius: 5px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    .section-head {
+        border-bottom: 1px solid @color-border;
+        width: 100%;
+        color: #666;
+        font-weight: 600;
+        padding-bottom: 10px;
+        margin-bottom: 10px;
+    }
+}
+.gh-card {
+    background: #fff;
+    padding: 15px;
+    border-radius: 5px;
+    margin-bottom: 10px;
+    &:first-child {
+        margin-top: 10px;
     }
 }
