--- a/index.hbs
+++ b/index.hbs
@@ -1,15 +1,15 @@
 {{!< default}}
 
-<div class="gh-page">
-    <div class="gh-container">
-
-        <div class="gh-postfeed">
+<div class="container mx-auto">
+    <div class="float-left w-full lg:w-9/12 ">
         {{#foreach posts visibility="all"}}
 
-            {{> "card"}} {{!-- partials/card.hbs --}}
+        {{> "card"}}
 
         {{/foreach}}
-        </div>
-
     </div>
+    <div class="float-right w-full lg:w-3/12 lg:pl-3">
+        {{> "sidebar"}}
+    </div>
+    <div class="clear-both"></div>
 </div>
