--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -187,3 +187,19 @@ body {
 .gh-card:first-child {
   margin-top: 10px;
 }
+.gh-article-main {
+  background: #fff;
+  margin-top: 10px;
+  padding: 15px;
+  border-radius: 5px;
+  margin-bottom: 10px;
+}
+.gh-readmore {
+  margin-top: 15px;
+}
+.gh-readmore .label {
+  background-color: #eee;
+  padding: 4px 8px;
+  font-size: 12px;
+  color: #666;
+}
