--- a/assets/less/common.less
+++ b/assets/less/common.less
@@ -126,3 +126,20 @@ body {
         margin-top: 10px;
     }
 }
+
+.gh-article-main {
+    background: #fff;
+    margin-top: 10px;
+    padding: 15px;
+    border-radius: 5px;
+    margin-bottom: 10px;
+}
+.gh-readmore {
+    margin-top: 15px;
+    .label {
+        background-color: #eee;
+        padding: 4px 8px;
+        font-size: 12px;
+        color: #666;
+    }
+}
