--- a/assets/less/common.less
+++ b/assets/less/common.less
@@ -116,6 +116,33 @@ body {
         padding-bottom: 10px;
         margin-bottom: 10px;
     }
+    .m-tag-card__link {
+        display: inline-block;
+        margin: 0 6px 5px 0;
+        white-space: nowrap;
+        text-overflow: ellipsis;
+        overflow: hidden;
+        background: #f5f5f5;
+        height: 22px;
+        line-height: 22px;
+        color: #666;
+        padding: 0 5px;
+        border: 1px solid @color-border;
+        font-size: 12px;
+    }
+    .m-featured-article__title {
+        color: #666;
+    }
+    .friends-link {
+        display: inline-block;
+        width: 45%;
+        margin: 0 6px 5px 0;
+        font-size: 12px;
+        color: #666;
+        padding: 2px 0;
+        text-align: center;
+        border-bottom: solid 1px @color-border;
+    }
 }
 .gh-card {
     background: #fff;
@@ -142,4 +169,7 @@ body {
         font-size: 12px;
         color: #666;
     }
+}
+.gh-card-meta {
+    color: #666;
 }
