--- a/page-tools.hbs
+++ b/page-tools.hbs
@@ -2,7 +2,43 @@
 
 <div class="container mx-auto">
     <div class="float-left w-full lg:w-9/12 ">
-        toolsdd
+        <div class="gh-tools-main">
+            <div class="gh-tools-section">
+                <div class="head">学习</div>
+                <div class="grid gap-2 grid-cols-1 lg:grid-cols-3">
+                    <div class="layui-col-xs12 layui-col-md4 item-box">
+                        <a target="_blank" href="http://www.alloyteam.com/" class="item">
+                            <div class="title">腾讯 AlloyTeam 团队</div>
+                            <div class="desc">腾讯Web前端团队，代表作品WebQQ，致力于前端技术的研究</div>
+                        </a>
+                    </div>
+                    <div class="layui-col-xs12 layui-col-md4 item-box">
+                        <a target="_blank" href="https://fed.taobao.org/" class="item">
+                            <div class="title">淘宝前端团队（FED）</div>
+                            <div class="desc">用技术为体验提供无限可能</div>
+                        </a>
+                    </div>
+                    <div class="layui-col-xs12 layui-col-md4 item-box">
+                        <a target="_blank" href="https://refactoringguru.cn/design-patterns/catalog" class="item">
+                            <div class="title">Refactoring</div>
+                            <div class="desc">22种经典设计模式通俗详解，包含ts示例</div>
+                        </a>
+                    </div>
+                    <div class="layui-col-xs12 layui-col-md4 item-box">
+                        <a target="_blank" href="http://www.krpano360.com/" class="item">
+                            <div class="title">krpano360</div>
+                            <div class="desc">最全面的krpano全景学习教程</div>
+                        </a>
+                    </div>
+                    <div class="layui-col-xs12 layui-col-md4 item-box">
+                        <a target="_blank" href="https://www.phaser-china.com/show.html" class="item">
+                            <div class="title">phaser-china</div>
+                            <div class="desc">phaser中文学习网站，包含多个示例源码</div>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
     <div class="float-right w-full lg:w-3/12 lg:pl-3">
         {{> "sidebar"}}
