--- a/assets/less/common.less
+++ b/assets/less/common.less
@@ -173,3 +173,44 @@ body {
 .gh-card-meta {
     color: #666;
 }
+.gh-tools-main {
+    background: #fff;
+    padding: 15px;
+    border-radius: 5px;
+    margin: 10px 0;
+}
+.gh-tools-section {
+    background: #fff;
+    padding: 15px 5px 10px 5px;
+    .head {
+        font-size: 18px;
+        margin-bottom: 5px;
+        padding-left: 10px;
+    }
+    .item-box {
+        padding: 5px 5px;
+    }
+    .item {
+        display: block;
+        padding: 15px 10px;
+        border-radius: 5px;
+        border: 1px solid #e4ecf3;
+        box-shadow: 1px 2px 3px #f2f6f8;
+        .title {
+            font-size: 14px;
+            margin-bottom: 5px;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            white-space: nowrap;
+        }
+        .desc {
+            color: gray;
+            font-size: 12px;
+            height: 40px;
+            line-height: 20px;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            display: flex;
+        }
+    }
+}
